bk_ida/gccida/g2/expand_end_case_type
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5724:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5731:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5732:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5737:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5750:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5751:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5755:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5757:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5762:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5763:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5765:4: error: expected ';' after expression
rtx v46; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5765:5: error: use of undeclared identifier 'v46'
rtx v46; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5766:4: error: expected ';' after expression
rtx v47; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5766:5: error: use of undeclared identifier 'v47'
rtx v47; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5770:4: error: expected ';' after expression
rtx v51; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5770:5: error: use of undeclared identifier 'v51'
rtx v51; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5771:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/stmt.c:5782:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v63; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_end_case_type/src/obj/stmt.o] Error 1
